# kaleidoscope

./: AGENT_INSTALL.md  Procfile  README.md  convex.json  convex_keys.proto  convex_keys_pb2.py  install.sh  package.json  pyproject.toml  release.json
ISSUES/: 0001-Support_MP4_Elapsed_Time.MD  0002-Support_Image_Uploads_For_Workflow_Invoke.MD  0003-Workflow_Get_Command.MD  0020-Remove-Hardcoded-Fallbacks.MD
ISSUES/0001/tests/: test_extract_mp4_metadata.py
docs/tutorials/: GettingStarted.md
experiment/: experiment-0001.py
indexer.legacy/: graph.py  punter.py
indexer.legacy/graph/: __init__.py  semantic.py
indexer.legacy/punter/: __init__.py  comfy.py  data.py  git.py  indexer.py  models.py  time.py
kaleidescope/: cli.py  config.py  main.py
kaleidescope.state/convex/: assets.js  bookmarks.js  notifications.js  schema.ts  search.js
kaleidescope.ui/: index.html  svelte.config.js  vite.config.ts
kaleidescope.ui/src/: App.svelte  app.css  vite-env.d.ts
kaleidescope/api/: __init__.py  download.py  notifications.py  publish.py  workflow.py
kaleidescope/services/: comfy.py  convex.py  git_ops.py  image.py  publish.py  publish_hf.py  storage.py
kaleidescope/utils/: logging.py
op/: __init__.py  __main__.py  cli.py  config.py  install.py
op/commands/: __init__.py  config_cmd.py  indexer.py  ingest.py  init.py  prompt.py  serve.py  start.py  stop.py  supervisor.py
op/indexer/: __init__.py  core.py  graph.py  reader.py  utils.py
op/utils/: __init__.py  api.py  banner.py  installer.py
op/workflow/: __init__.py  cli.py  core.py  meilisearch.py
(+41 files in other folders)
