[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "op"
version = "0.1.0"
description = "CLI tool for kaleidescope FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Latent Kestrel"}
]
keywords = ["cli", "kaleidescope", "comfyui", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "honcho>=1.0.0",
    "cryptography>=41.0.0",
    "protobuf>=4.21.0",
    "Pillow>=10.0.0",
    "inotify-simple>=1.2.1",
    "meilisearch>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
op = "op.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["op"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
